network.tf
# VPC, subnets, internet gateway, route tables, VPC endpoints, NAT gateways, etc.

# Create a VPC
resource "aws_vpc" "main" {
    # /16 means the first 16 bits are locked
    # 10.0.x.x is the range of the VPC
    cidr_block = "10.0.0.0/16"
    # VPC Gateway Endpoint needs DNS resolution to be enabled
    enable_dns_support = true
    enable_dns_hostnames = true
    tags = {
        Name = "${local.name_prefix}-vpc"
    }
}

#  Create a public subnet
resource "aws_subnet" "public_subnet_1a" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.1.0/24"
    availability_zone = "us-east-1a"
    map_public_ip_on_launch = true

    tags = {
        Name = "${local.name_prefix}-public-subnet-main"
    }
}

# Create a backup public subnet
resource "aws_subnet" "public_subnet_1b" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.2.0/24"
    availability_zone = "us-east-1b"
    map_public_ip_on_launch = true

    tags = {
        Name = "${local.name_prefix}-public-subnet-backup"
    }
}

# Create an Internet Gateway
resource "aws_internet_gateway" "igw" {
    vpc_id = aws_vpc.main.id
    tags = {
        Name = "${local.name_prefix}-igw"
    }
}

# Create a private subnet
resource "aws_subnet" "private_subnet_1a" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.3.0/24"
    availability_zone = "us-east-1a"

    tags = {
        Name = "${local.name_prefix}-private-subnet-main"
    }
}

# Create a backup private subnet
resource "aws_subnet" "private_subnet_1b" {
    vpc_id = aws_vpc.main.id
    cidr_block = "10.0.4.0/24"
    availability_zone = "us-east-1b"

    tags = {
        Name = "${local.name_prefix}-private-subnet-backup"
    }
}

#  Create a VPC endpoint for DynamoDB
resource "aws_vpc_endpoint" "vpc_endpoint_dynamodb" {
    vpc_id = aws_vpc.main.id
    service_name = "com.amazonaws.us-east-1.dynamodb"
    vpc_endpoint_type = "Gateway"
    route_table_ids = [aws_route_table.private_route_table.id]
    tags = {
        Name = "${local.name_prefix}-vpc-endpoint-dynamodb"
    }
}

# Create a route table for outbound traffic to go through the Internet Gateway
resource "aws_route_table" "public_route_table" {
    vpc_id = aws_vpc.main.id

    route {
        cidr_block = "0.0.0.0/0"
        gateway_id = aws_internet_gateway.igw.id
    }

    tags = {
        Name = "${local.name_prefix}-public-route-table"
    }
}

# Create route table association for the public subnets
resource "aws_route_table_association" "public_subnet_1a" {
    subnet_id = aws_subnet.public_subnet_1a.id
    route_table_id = aws_route_table.public_route_table.id
}

resource "aws_route_table_association" "public_subnet_1b" {
    subnet_id = aws_subnet.public_subnet_1b.id
    route_table_id = aws_route_table.public_route_table.id
}

# Create a route table for private subnets
resource "aws_route_table" "private_route_table" {
    vpc_id = aws_vpc.main.id
    tags = {
        Name = "${local.name_prefix}-private-route-table"
    }
}

# Create route table association for the private subnets
resource "aws_route_table_association" "private_subnet_1a" {
    subnet_id = aws_subnet.private_subnet_1a.id
    route_table_id = aws_route_table.private_route_table.id
}

resource "aws_route_table_association" "private_subnet_1b" {
    subnet_id = aws_subnet.private_subnet_1b.id
    route_table_id = aws_route_table.private_route_table.id
}
